--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nederlonder.wqms">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".AboutActivity" />
-        <activity android:name=".MonitoringActivity"></activity>
+        <activity android:name=".MonitoringActivity" />
+        <activity android:name=".LiveGraphActivity" />
+        <activity android:name=".HistoricalActivity"></activity>
     </application>
 
 </manifest>
