--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'joda-time:joda-time:2.9.9'
 
     implementation "com.google.code.gson:gson:$gsonVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
