--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nederlonder.wqms">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +21,8 @@
         <activity android:name=".AboutActivity" />
         <activity android:name=".MonitoringActivity" />
         <activity android:name=".LiveGraphActivity" />
-        <activity android:name=".HistoricalActivity"></activity>
+        <activity android:name=".HistoricalActivity" />
+        <activity android:name=".LiveGraphDetailActivity" />
     </application>
 
 </manifest>
