--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 ext {
     supportVersion = '27.1.1'
@@ -7,7 +8,7 @@ ext {
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.nederlonder.wqms"
+        applicationId "com.trollyhandle.wqms"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
@@ -31,11 +32,11 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.2"
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     //rxJava
-    implementation 'io.reactivex:rxjava:1.2.9'
+    implementation 'io.reactivex:rxjava:1.3.3'
     implementation 'io.reactivex:rxandroid:1.2.1'
 
     implementation "com.android.support:recyclerview-v7:$supportVersion"
@@ -44,4 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
